reliability-v2/content/http-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-perf
  name: http-perf
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  type: NodePort
