reliability-v2/content/http-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: http-perf
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: http-perf
