reliability-v2/content/route-http.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-http
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nginx
